SEC540 Lab 3.3/dm-web-main/manifests/aws/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: dm
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      name: web
      labels:
        app: web
    spec:
      serviceAccountName: "web-sa"
      containers:
        - name: web
          image: "{IMAGE_NAME}"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8443
      nodeSelector:
        kubernetes.io/os: linux
