SEC540 Lab 3.3/dm-web-main/manifests/aws/service-green.yml
apiVersion: v1
kind: Service
metadata:
  name: web-green
  namespace: dm
  labels:
    app: web-green
spec:
  selector:
    app: web-green
  type: NodePort
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
