SEC540 Lab 3.3/dm-web-main/manifests/aws/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: dm
  labels:
    app: web
spec:
  selector:
    app: web
  type: NodePort
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
